--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "private": true,
   "dependencies": {
+    "@splidejs/react-splide": "^0.7.5",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^6.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
